<resources>
    <string name="app_name">eMarket Admin</string>
    <string name="db_field_date_created">dateCreated</string>
    <string name="db_field_date_completed">categoryId</string>
    <string name="db_field_date_delivery">dateDelivery</string>
    <string name="curr_eur">€</string>
    <string name="curr_gbp">£</string>
    <string name="curr_usd">$</string>
    <string name="label_activity_sign_in_with_phone_number">Add a number</string>
    <string name="label_activity_sign_in_with_phone_number_verification">Verify number</string>
    <string name="label_activity_notifications">Notifications</string>
    <string name="tab_pending">Pending</string>
    <string name="tab_completed">Completed</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_in_phone">Continue with phone number</string>
    <string name="button_sign_in_google">Continue with google account</string>
    <string name="button_send">Send</string>
    <string name="button_verify">Verify</string>
    <string name="button_resend">Resend</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_resend_in">Resend in %1$ss</string>
    <string name="txt_congratulations">Congratulations!</string>
    <string name="txt_congratulations_2">Your account has been
        created successfully! You can now
        continue using eMarket.</string>
    <string name="txt_you_are_offline">You\'re Offline!</string>
    <string name="txt_you_are_offline_2">Check your internet connection and try again.</string>
    <string name="txt_Step_1">Add
        your number</string>
    <string name="txt_Step_2">Verify
        your number</string>
    <string name="txt_Step_3">Enter your
        personal details</string>
    <string name="txt_no_notifications">No notifications!</string>
    <string name="txt_no_notifications_2">New notifications will appear here.</string>
    <string name="txt_login">Login</string>
    <string name="txt_no_orders">No orders found!</string>
    <string name="txt_no_orders_2">You have no pending or previous orders.</string>
    <string name="txt_no_orders_pending">You have no pending or previous orders.</string>
    <string name="txt_no_orders_previous">You have no previous orders.</string>
    <string name="txt_search_not_found">No search result found!</string>
    <string name="txt_search_not_found_2">Try again with another entry or contact us if you think this is an error.</string>
    <string name="txt_clear_all">Clear all</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_today">Today</string>
    <string name="txt_yesterday">Yesterday</string>
    <string name="txt_last_week">Last week</string>
    <string name="txt_sec_ago">sec ago</string>
    <string name="txt_min_ago">min ago</string>
    <string name="txt_day_ago">day ago</string>
    <string name="txt_days_ago">days ago</string>
    <string name="txt_item_or_items"> item(s)</string>
    <string name="txt_arriving">Arriving: </string>
    <string name="txt_total">Total: </string>
    <string name="txt_order_num_sign">Order #</string>
    <string name="text_items_orders">Items Ordered</string>
    <string name="txt_address">Address</string>
    <string name="txt_payment_method">Payment Method</string>
    <string name="txt_delivery_time">Delivery Time</string>
    <string name="txt_total_amount">Total Amount</string>
    <string name="txt_order_status">Order Status</string>
    <string name="txt_pending">Pending</string>
    <string name="txt_processing">Processing</string>
    <string name="txt_completed">Completed</string>
    <string name="txt_loading">Loading…</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_street_address">Street address</string>
    <string name="txt_zip_code">Zip code</string>
    <string name="txt_country">Country</string>
    <string name="txt_street_number">Street Number</string>
    <string name="txt_type">Type</string>
    <string name="txt_house_">House</string>
    <string name="txt_apartment">Apartment</string>
    <string name="txt_other">Other</string>
    <string name="txt_out_of_stock">Out of Stock</string>
    <string name="txt_available">Available</string>
    <string name="txt_format_price" translatable="false">%1$s%2$,.2f</string>
    <string name="txt_format_weight" translatable="false">%1$d %2$s</string>
    <string name="txt_format_added_by_user">Added By: %1$s</string>
    <string name="txt_format_last_modified_by_user">Last Modified By: %1$s</string>
    <string name="txt_format_update">Update %1$s</string>
    <string name="txt_error_registration_failed">An error has occurred with registration, please contact our support team.</string>
    <string name="txt_error_empty_name">Please enter your full name.</string>
    <string name="txt_error_empty_password">Please enter your password.</string>
    <string name="txt_error_empty_email">Please enter your email.</string>
    <string name="txt_error_empty_phone">Please enter your phone number.</string>
    <string name="txt_error_empty_address">Please enter your address.</string>
    <string name="txt_error_empty_zip_code">Please enter your zip code.</string>
    <string name="txt_error_empty_product_category">Please select a category for the product.</string>
    <string name="txt_error_empty_product_description">Please enter details about the product.</string>
    <string name="txt_error_empty_product_name">Please enter the name of the product.</string>
    <string name="txt_error_empty_product_price">Please enter the price of the product in #.## format.</string>
    <string name="txt_error_empty_product_stock">Please enter the available stock of the product.</string>
    <string name="txt_error_user_not_admin">You must be an administrator to use this app!</string>
    <string name="txt_please_wait">Please wait…</string>
    <string name="txt_please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="txt_password_reset_mail_sent">Email sent successfully to reset your password!</string>
    <string name="txt_format_phone">+%1$s %2$s</string>
    <string name="txt_format_address">%1$s, %2$s</string>
    <string name="txt_format_order_address">%1$s, %2$s,\n%3$s, %4$s,\n\n%5$s</string>
    <string name="txt_format_user_details">%1$s\'s details</string>
    <string name="txt_category_vegetables">Vegetables</string>
    <string name="txt_category_beverages">Beverages</string>
    <string name="txt_category_chilled">Chilled</string>
    <string name="txt_category_household">Household</string>
    <string name="txt_category_homeware">Homeware</string>
    <string name="txt_category_grocery">Grocery</string>
    <string name="txt_category_fish">Fish</string>
    <string name="txt_category_meat">Meat</string>
    <string name="txt_category_frozen">Frozen</string>
    <string name="txt_category_fruits">Fruits</string>
    <string name="txt_category_liquor">Liquor</string>
    <string name="txt_category_pharmacy">Pharmacy</string>
    <string name="input_txt_hint_dash">-</string>
    <string name="input_txt_hint_phone_number">Your mobile number</string>
    <string name="input_txt_hint_full_name">Your full name</string>
    <string name="input_txt_hint_address">Your address</string>
    <string name="input_txt_hint_zip_code">Your zip code</string>
    <string name="input_txt_hint_category">Product category. Ex: Fruits</string>
    <string name="input_txt_hint_product_name">Product name. Ex: Apple</string>
    <string name="input_txt_hint_product_price">Product price. Ex: 5.30</string>
    <string name="input_txt_hint_product_weight">Product weight. Ex: 2KG</string>
    <string name="input_txt_hint_product_sale">Product sale. Ex: 0.5 = 50%</string>
    <string name="input_txt_hint_product_stock">Product stock. Ex: 65</string>
    <string name="input_txt_hint_description">Product details.</string>
    <string name="input_txt_hint_email">Your email address</string>
    <string name="input_txt_hint_password">Your password</string>
    <string name="input_txt_hint_name">Your name</string>
    <string name="welcome_act_header">Welcome to\n<b>eMarket</b> shopping</string>
    <string name="sign_in_act_header">Sign-In</string>
    <string name="sign_in_act_header_2">Enter your email and password to continue to eMarket Admin app.</string>
    <string name="sign_in_act_or">Or login with</string>
    <string name="sign_in_phone_act_header">What\&apos;s your phone number?</string>
    <string name="sign_in_phone_act_header_2">Enter your phone number to continue</string>
    <string name="sign_in_phone_verification_act_header">Verify your number</string>
    <string name="sign_in_phone_verification_act_header_2">4 digit code sent to <b>+%1$s</b></string>
    <string name="fill_acc_info_act_header">Fill your details</string>
    <string name="fill_acc_info_act_header_2">Enter your personal details to continue</string>
    <string name="fill_acc_info_act_or">OR</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txt_store">Store</string>
    <string name="txt_statistics">Statistics</string>
    <string name="txt_products">Products</string>
    <string name="txt_orders">Orders</string>
    <string name="txt_users">Users</string>
    <string name="txt_my_account">My Account</string>
    <string-array name="text_array_sorting_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="nav_drawer_open_menu">Open Side Menu</string>
    <string name="drawer_nav_bar_category_general">General</string>
    <string name="drawer_nav_bar_item_products">Products</string>
    <string name="drawer_nav_bar_item_orders">Orders</string>
    <string name="drawer_nav_bar_item_users">Users</string>
    <string name="drawer_nav_bar_category_account">Account</string>
    <string name="drawer_nav_bar_item_my_account">My Account</string>
    <string name="drawer_nav_bar_category_other">Other</string>
    <string name="drawer_nav_bar_item_settings">Settings</string>
    <string name="drawer_nav_bar_item_exit">Exit</string>
    <string name="txt_account_info">Account Info</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_no_description">No description.</string>
    <string name="txt_dismiss">DISMISS</string>
    <string name="txt_no_favorites">No favorites found!</string>
    <string name="txt_no_favorites_2">You haven\'t add anything to your favorites yet!</string>
    <string name="txt_forgot_password_question">Forgot password?</string>
    <string name="txt_forgot_password">Forgot password</string>
    <string name="txt_enter_email_address_to_send_reset_code">Enter email address to send reset code.</string>
    <string name="txt_password_reset">Password Reset</string>
    <string name="txt_update_profile">Update Profile</string>
    <string name="txt_must_sign_in_2">You must sign in to see this.</string>
    <string name="txt_must_sign_in">Sign In!</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_add_new_address">Add address</string>
    <string name="txt_edit_address">Edit address</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_favorites">Favorites</string>
    <string name="notification_channel_desc">Notifies you when an item in your favorites is back in stock!</string>
    <string name="notification_payload_fav_title">%1$s: Stock updated!</string>
    <string name="notification_payload_fav_body">%1$s is now available in stock 😍</string>
    <string name="category">Category</string>
    <string name="select">Select</string>
</resources>