<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:title="@string/drawer_nav_bar_category_general">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer_item_statistics"
                    android:icon="@drawable/svg_statistics"
                    android:title="@string/drawer_nav_bar_item_products" />
                <item
                    android:id="@+id/nav_drawer_item_products"
                    android:icon="@drawable/svg_food_stand_products"
                    android:title="@string/drawer_nav_bar_item_products" />
                <item
                    android:id="@+id/nav_drawer_item_orders"
                    android:icon="@drawable/svg_orders"
                    android:title="@string/drawer_nav_bar_item_orders" />
                <item
                    android:id="@+id/nav_drawer_item_users"
                    android:icon="@drawable/svg_users"
                    android:title="@string/drawer_nav_bar_item_users" />
            </group>
        </menu>
    </item>
    <item android:title="@string/drawer_nav_bar_category_account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer_item_profile"
                    android:icon="@drawable/svg_user_circle"
                    android:title="@string/drawer_nav_bar_item_my_account" />
            </group>
        </menu>
    </item>
    <item android:title="@string/drawer_nav_bar_category_other">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_drawer_item_settings"
                android:icon="@drawable/ic_gear"
                android:title="@string/drawer_nav_bar_item_settings" />
            <item
                android:id="@+id/nav_drawer_item_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/drawer_nav_bar_item_exit" />
            </group>
        </menu>
    </item>
</menu>
