<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.WelcomeActivity"
    tools:ignore="ContentDescription" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="89dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_container" />

    <TextView
        android:id="@+id/textView_Sign_In_Header_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/core_sans_cr_regular"
        android:text="@string/welcome_act_header"
        android:textAlignment="center"
        android:textColor="@color/colorWhiteLight"
        android:textSize="@dimen/txt_font_size_header_1_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/btn_width_small_flat_134"
        android:layout_height="@dimen/btn_height_small_flat_36"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_small_1_selector"
        android:fontFamily="@font/core_sans_cr_medium"
        android:text="@string/button_sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/btn_font_size_small_flat_14"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Sign_In_Header_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/txt_Sign_In"
        android:visibility="gone"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height_small_flat_36"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/core_sans_cr_medium"
        android:text="@string/button_sign_up"
        android:textColor="@color/colorWhiteLight"
        android:textSize="@dimen/btn_font_size_small_flat_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>