<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_container_dialog_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn_Try_Again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/core_sans_cr_medium"
            android:gravity="start|center_vertical"
            android:text="@string/button_try_again"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btn_font_size_small_flat_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_Header_2"
            app:layout_constraintTop_toBottomOf="@+id/txt_Header_2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_Header_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/core_sans_cr_regular"
            android:text="@string/txt_you_are_offline_2"
            android:textAlignment="textStart"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/txt_font_size_header_3_16"
            app:layout_constraintEnd_toEndOf="@+id/txt_Header_1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_Header_1"
            app:layout_constraintTop_toBottomOf="@+id/txt_Header_1" />

        <TextView
            android:id="@+id/txt_Header_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/core_sans_cr_regular"
            android:text="@string/txt_you_are_offline"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/txt_font_size_header_2_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imgView_Icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgView_Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_wifi" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

